--- a/layouts/index.html
+++ b/layouts/index.html
@@ -22,7 +22,7 @@
             </div>
           </p>
 		      <div class="post">
-            <div id="content-font"><p>{{ .Summary }}</br></br><a href="{{ .Permalink }}" class="readmore">Read more...</a></p></div>
+            <div id="content-font"><p>{{ .Content }}</br></br></p></div>
             
           </div>
 	      </article>
