--- a/layouts/index.html
+++ b/layouts/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Gophercon 2015 | Denver, CO</title>
 <link href='http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700' rel='stylesheet' type='text/css'>
 <style>
@@ -230,7 +231,7 @@ img.plane {
 		left: 50%;
 		margin-left: -125px;
 		padding: 0px;
-		top: 15%;
+		top: 30%;
 		width: 250px;
 	}
 	.message-container p {
