--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,285 +1,478 @@
-@import url(http://fonts.googleapis.com/css?family=Roboto:400,300);
+@charset "UTF-8";
 
-body
-{
-  font-family: 'Roboto', Helvetica, Arial, sans-serif;
-  line-height: 28px;
-  color:#2c3e50;
-  background-color:white;
-  width:100%;
- /* border-top:10px solid #f36d5b; */
+/*-------------------- Global Styles --------------------*/
+.btn {
+	border-radius: 10px 10px 10px 10px;
+}
+.btn-orange {
+    background-color: #f07332;
+	border: 4px solid #f9b575;
+    color: #fff;
+	font-size: 18px;
+}
+.btn-blue {
+    background-color: #4cc4ec;
+	border: 4px solid #5dadc8;
+    color: #fff;
+	font-size: 18px;
 }
 
-
-.container {
-	width: 1100px;
+/*-------------------- Header Styles --------------------*/
+header {
+	background: url(../images/header-bg.jpg);
+	background-size: 150%;
 }
-
-.jumbo {
-	background-color: #F7F7F7;
-	margin-top: -20px;
-	height: 270px;
-	padding-top: 30px;
+header .colors {
+	margin: 0;
 }
-
-.footerjumbo {
-	background-color: #F7F7F7;
-
-	height: 270px;
-	width: 100%;
+header .colors div {
+	height: 10px;
+}
+header .colors .col-md-2 {
+	-webkit-animation-duration: 0.5s;
+	-moz-animation-duration: 0.5s;
+	-ms-animation-duration: 0.5s;
+	-o-animation-duration: 0.5s;
+	animation-duration: 0.5s;
+	padding: 0;
+	margin: 0;
+}
+header .colors .col-md-2:nth-child(1n+0) {
+    background: #40657c;
+  	-webkit-animation-delay: 0.1s;
+	-moz-animation-delay: 0.1s;
+	-ms-animation-delay: 0.1s;
+	-o-animation-delay: 0.1s;
+	animation-delay: 0.1s;
+}
+header .colors .col-md-2:nth-child(2n+0) {
+    background: #4cc4ec;
+	-webkit-animation-delay: 0.2s;
+	-moz-animation-delay: 0.2s;
+	-ms-animation-delay: 0.2s;
+	-o-animation-delay: 0.2s;
+	animation-delay: 0.2s;
+}
+header .colors .col-md-2:nth-child(3n+0) {
+    background: #edead7;
+	-webkit-animation-delay: 0.3s;
+	-moz-animation-delay: 0.3s;
+	-ms-animation-delay: 0.3s;
+	-o-animation-delay: 0.3s;
+	animation-delay: 0.3s;
+}
+header .colors .col-md-2:nth-child(4n+0) {
+    background: #b3ad9f;
+	-webkit-animation-delay: 0.4s;
+	-moz-animation-delay: 0.4s;
+	-ms-animation-delay: 0.4s;
+	-o-animation-delay: 0.4s;
+	animation-delay: 0.4s;
+}
+header .colors .col-md-2:nth-child(5n+0) {
+    background: #f9b575;
+	-webkit-animation-delay: 0.5s;
+	-moz-animation-delay: 0.5s;
+	-ms-animation-delay: 0.5s;
+	-o-animation-delay: 0.5s;
+	animation-delay: 0.5s;
+}
+header .colors .col-md-2:nth-child(6n+0) {
+    background: #f07332;
+	-webkit-animation-delay: 0.6s;
+	-moz-animation-delay: 0.6s;
+	-ms-animation-delay: 0.6s;
+	-o-animation-delay: 0.6s;
+	animation-delay: 0.6s;
+}
+header .header-content {
 	position: relative;
-		bottom:0px;
-	margin-bottom: 0px;
-	padding: 40px;
-
 }
-
-.huge {
-	padding-left: 0px;
+header .header-content .container {
+	position:relative;
 }
-
-.logo {
-	padding-left: 10%;
-	left: 10px;
-	width: 320px;
+header .header-content .col-md-6 img {
+	-webkit-animation-duration: 0.8s;
+	-moz-animation-duration: 0.8s;
+	-ms-animation-duration: 0.8s;
+	-o-animation-duration: 0.8s;
+	animation-duration: 0.8s;
+	display: block;
+    margin: 50px auto 0;
+    position: relative;
+    text-align: center;
+    width: 100%;
+    z-index: 2;
 }
-
-.moto {
-	margin-left: 5%;
+header .header-content .col-md-3 {
+	margin-top: 80px;
 }
-
-.verybig {
-	font-size: 40px;
+header .header-content .col-md-3 h3 {
+	color: #40657c;
+	text-shadow: 0px 1px 0px #FFFFFF;
 }
-
-.prettybig {
-	font-size: 24px;
-	padding-top: 10px;
-	color: #636363;
-	line-height: 34px;
-}
-
-#orange {
-	color: #D67947;
-}
-
-.lynx {
+header .header-content .col-md-3 p {
+	color: #646464;
 	font-size: 16px;
-	letter-spacing: 1px;
-	overflow-y:auto;
-  z-index:1000;
+	text-shadow: 0px 1px 0px #FFFFFF;
 }
-
-.navbar-default a:hover {
-    color: white;
+header .header-content .tickets-section {
+	text-align: right;
 }
-
-.navbar-default .navbar-brand {
+header .header-content .speaker-section {
+	text-align: left;
 }
-
-.navbar-default {
-    background-color: white;
-    border-bottom: 1px solid #ececec;
-    height: 70px;
-    padding-top: 10px;
-}
-
-.navbar-brand  {
-    color: red;
-    font-size: 24px;
-    
-    letter-spacing: 1px;
+header .header-content .col-md-6 section.countdown {
+		background: none repeat scroll 0 0 #f07332;
+    border: 6px solid #f9b575;
+    border-radius: 15px;
+	bottom: -70px;
+    display: block;
+    left: 50%;
+    margin: 0 0 0 -110px;
+    padding: 12px 10px 15px;
     position: absolute;
-    left: 10%;
+    text-align: center;
+    width: 220px;
+    z-index: 4;
 }
-
-.navbar-right {
-	position: relative;
-	right: 10%;
+header .header-content .col-md-6 section.countdown #Stage_jbeeb_3 {
+	margin: 0 auto !important;
+	text-align: center;
 }
-
-/* centered columns styles */
-.row-centered {
-    text-align:center;
+header .header-content .col-md-6 section.countdown #Stage_jbeeb_3 div span {
+	color: #FFFFFF !important;
+	text-shadow: 0px 2px 0px rgba(0,0,0,0.3)
 }
-
-
-.boxy {
-	width: 39%;
-	margin-left: 11%;
-	border: 1px solid #ececec;
-	padding: 20px;
-	margin-top: 40px;
-}
-
-.boxy2 {
-	width: 39%;
-	margin-left: 1%;
-	border: 1px solid #ececec;
-	padding: 20px;
-	margin-top: 40px;
-}
-
-.boxy3 {
-	width: 78%;
-	margin-left: 11%;
-	border: 1px solid #ececec;
-	padding: 20px;
-	margin-top: 40px;
-}
-
-.article-title {
-	font-size: 22px;
-}
-
-.resources {
-	font-size: 22px;
-	line-height: 40px;
-}
-
-@media (max-width:1200px) {
-
-.verybig {
-	font-size: 36px;
-}
-
-.prettybig {
-	font-size: 20px;
-	padding-top: 10px;
-	color: #636363;
-	line-height: 34px;
-}
-
-}
-
-@media (max-width:1000px) {
-
-.verybig {
-	font-size: 26px;
-	display: none;
-}
-
-.prettybig {
-	font-size: 17px;
-	padding-top: 10px;
-	color: #636363;
-	line-height: 34px;
-	display:none;
-}
-
-.logo {
-	padding-left: 37%;
-	left: 10px;
-	width: 320px;
-}
-
-
-.boxy {
-	width: 96%;
-	margin-left: 2%;
-	border: 1px solid #ececec;
-	padding: 20px;
-	margin-top: 40px;
-}
-
-.boxy2 {
-	width: 96%;
-	margin-left: 2%;
-	border: 1px solid #ececec;
-	padding: 20px;
-	margin-top: 40px;
-}
-
-.boxy3 {
-	width: 96%;
-	margin-left: 2%;
-	border: 1px solid #ececec;
-	padding: 20px;
-	margin-top: 40px;
-}
-
-}
-
-
-@media (max-width:767px) {
-
-.jumbo {
-}
-
-.navbar-brand  {
-    color: red;
-    font-size: 24px;
-    font-family: 'Roboto', Helvetica, Arial, sans serif;
+header .color-bar {
+    background: none repeat scroll 0 0 #40657c;
+    height: 80px;
     position: absolute;
-    left: 10px;
+    bottom: 0px;
+    z-index: 1;
+    width: 100%;
 }
 
-.navbar-right {
+/*-------------------- Event Dates Styles --------------------*/
+.event-dates {
+	background:#b3ad9f;
+	padding: 0 0 0 0;	
+}
+.event-dates .col-md-3 .back-border {
+	text-align: center;
+	border-bottom: 5px solid #918977;
+	border-radius: 10px;
+	padding: 25px;
+	margin: 80px 10px;
+	font-family: lato;
+	background: #ffffff;
+	color: #5b5b5b;
+	min-height: 250px;
+}
+.event-date-orange, .event-date-blue{
+	margin-top: -80px;
 	position: relative;
-	left: 10px;
 }
-
-.verybig {
-	font-size: 26px;
+.event-date-orange h3 span, .event-date-blue h3 span{
+	font-weight: 800;
 }
-
-.prettybig {
-	font-size: 14px;
-	padding-top: 10px;
-	color: #636363;
-	line-height: 34px;
+.event-date-orange h3, .event-date-blue h3{
+	color: #ffffff;
+	font-weight: 100;
+	position: relative;
+	z-index: 3;
+	letter-spacing: 2px;
 }
-
-.logo {
-	padding-left: 30%;
-	left: 0px;
-	width: 320px;
+.event-date-orange h3 span, .event-date-blue h3 span{
+	font-size: 40px;
+	display: block; 
 }
-
-.boxy {
-	width: 100%;
-	margin-left: 0px;
-	border: 1px solid #ececec;
-	padding: 30px;
-	margin-top: 40px;
+.event-date-orange img , .event-date-blue img{
+	width: 150px;
+	margin-top: -115px;
+	position: relative;
+	z-index: 2;
+	margin-bottom: 15px;
 }
-
-.boxy2 {
-	width: 100%;
-	margin-left: 0px;
-	border: 1px solid #ececec;
-	padding: 30px;
-	margin-top: 40px;
+.event-dates .col-md-3 .back-border p:nth-child(2) {
+	font-size:17px;
+	color: #4cc4ec;
 }
-
-.boxy3 {
-	width: 100%;
-	margin-left: 0px;
-	border: 1px solid #ececec;
-	padding: 30px;
-	margin-top: 40px;
-}
-
+.event-dates .col-md-3 .back-border p:nth-child(3) {
+	font-size:15px;
 
 }
 
+/*-------------------- Hotel Styles --------------------*/
 
-@media screen and (max-width: 400px) {
-
-
+.main-info{
+    background:#b3ad9f;
+	position: relative;
+}
+.main-info .container .row{
+	margin-top: 80px;
+}
+.main-info .container .col-md-10 {
+	color: #ffffff;
+	text-align: center;
+}
+.main-info .container .col-md-10 h1 {
+	color: #FFFFFF;
+	display: block;
+	font-size: 30px;
+	margin: 10px 0 0 0;
+}
+.main-info .container .col-md-10 h1 span {
+	font-size: 24px;
+	font-weight:normal;
+}
+.main-info .container .col-md-10 p {
+	color: #FFFFFF;
+}
+main .container .col-md-10 p {
+	color: #4c4c4c;
+    font-size: 22px;
+	line-height: 30px;
+	margin: 0 0 30px 0;
+}
+main .hotels {
+	margin: 50px 0 0 0;
+}
+main .hotels .col-md-2 {
+    height: 400px;
+    padding: 0;
+    position: relative;
+    width: 20%;
+	box-shadow: -2px 2px 5px rgba(0,0,0,0.3);
+}
+main .hotels .embassy {
+	background: url("../images/embassy.jpg") repeat scroll bottom rgba(0, 0, 0, 0);
+}
+main .hotels .hampton {
+	background: url("../images/hampton.jpg") repeat scroll bottom rgba(0, 0, 0, 0);
+}
+main .hotels .hilton {
+	background: url("../images/hilton.jpg") repeat scroll bottom rgba(0, 0, 0, 0);
+}
+main .hotels .homewood {
+	background: url("../images/homewood.jpg") repeat scroll bottom rgba(0, 0, 0, 0);
+}
+main .hotels .curtis {
+	background: url("../images/curtis.jpg") repeat scroll bottom rgba(0, 0, 0, 0);
+}
+main .hotels .col-md-2 section {
+	background: none repeat scroll 0 0 rgba(64, 101, 124, 0.9);
+    bottom: 0;
+    color: #ffffff;
+    position: absolute;
+    width: 100%;
+    padding: 5px 10px;
+}
+main .hotels .col-md-2 h4 {
+	background: none repeat scroll 0 0 rgba(40, 40, 40, 0.8);
+	color: #ffffff;
+	padding: 10px;
+    position: absolute;
+    top: -10px;
+    text-shadow: 0px 0px 10px rgba(0,0,0,0.8);
 }
 
-
-
-mark {
-    background-color: #ececec;
-    color: black;
-    padding-left: 3px;
-    padding-right: 1px;
+main .hotels .col-md-2 section p b {
+	font-size: 25px;
+	color: #ffffff;
+}
+main .hotels .col-md-2 section p:nth-child(1) {
+	color: #f9b575;	 
+}
+main .hotels .col-md-2 section p:nth-child(n+2) {
+	color: #e1e1e1;
+}
+footer {
+	background: #5d5d5d;
+	padding: 20px;
+	color: #ffffff;
+}
+footer a{
+	color: #f07332;
 }
 
-mark:hover {
-	background-color: #333;
-	color: white;
-	transition:all .2s ease 0
+/*---------------------------------------- Responsive Styles Start ---------------------------------------- */
+
+/*-- Smallest devices (phones, 320px to 480px) --*/
+@media (min-width: 320px) and (max-width: 480px) {
+	header .colors .col-md-2 {
+		float: left;
+		width: 16.6667%;
+	}
+	header .header-content .col-md-3 {
+		display: none;
+	}
+	header .header-content .col-md-6 img {
+		margin: 50px auto 110px;
+	}
+	header .header-content .col-md-6 section.countdown {
+		bottom: -160px;
+	}
+	header .color-bar {
+		height: 155px;
+	}
+	header .color-bar .mobile-buttons {
+		display: block !important;
+		padding: 10px 30px;
+	}
+	header .color-bar .mobile-buttons a {
+		margin: 35px 0px 0px 0px;
+		width: 45%;
+	}
+	header .color-bar .mobile-buttons a.btn-orange {
+		float: left;
+	}
+	header .color-bar .mobile-buttons a.btn-blue {
+		float: right;
+	}
+	
+	.event-dates .col-md-3 .back-border {
+		min-height: 200px;
+	}
+	
+	main .hotels .col-md-2 {
+		width: 100%;
+		float: left;
+		height: 275px;
+	}
+	main .hotels .embassy {
+		background-size: 100%;
+		background-position: center;
+	}
+	main .hotels .hilton {
+		background-size: 120%;
+	}
+	
 }
+
+/*-- Small devices (tablets, 481px to 767px) --*/
+@media (min-width: 481px) and (max-width: 767px) {
+	header .colors .col-md-2 {
+		float: left;
+		width: 16.6667%;
+	}
+	header .header-content .col-md-3 {
+		display: none;
+	}
+	header .header-content .col-md-6 img {
+		max-width: 450px;
+		margin: 50px auto 90px;
+	}
+	header .header-content .col-md-6 section.countdown {
+		bottom: -160px;
+	}
+	header .color-bar {
+		height: 155px;
+	}
+	header .color-bar .mobile-buttons {
+		display: block !important;
+		padding: 10px 30px;
+	}
+	header .color-bar .mobile-buttons a {
+		margin: 35px 0px 0px 0px;
+		width: 45%;
+	}
+	header .color-bar .mobile-buttons a.btn-orange {
+		float: left;
+	}
+	header .color-bar .mobile-buttons a.btn-blue {
+		float: right;
+	}
+	main .hotels .col-md-2 {
+		width: 50%;
+		float: left;
+		height: 300px;
+	}
+	main .hotels .col-md-2:last-child {
+		width: 100%;
+		float: left;
+		height: 300px;
+	}
+	.event-dates .col-md-3 {
+		float: left;
+		width: 50%;
+	}
+	.event-dates .col-md-3 .back-border {
+		margin: 80px 10px 0px;
+		min-height: 285px;
+	}
+	.event-dates {
+		padding-bottom: 20px;
+	}
+}
+
+/*-- Medium devices (desktops, 768px to 991px) --*/
+@media (min-width: 768px) and (max-width: 991px) {
+	header .colors .col-md-2 {
+		float: left;
+		width: 16.6667%;
+	}
+	header .header-content .col-md-3 {
+		display: none;
+	}
+	header .header-content .col-md-6 img {
+		max-width: 450px;
+		margin: 50px auto 90px;
+	}
+	header .header-content .col-md-6 section.countdown {
+		bottom: -160px;
+	}
+	header .color-bar {
+		height: 155px;
+	}
+	header .color-bar .mobile-buttons {
+		display: block !important;
+		padding: 10px 30px;
+	}
+	header .color-bar .mobile-buttons a {
+		margin: 35px 0px 0px 0px;
+		width: 45%;
+	}
+	header .color-bar .mobile-buttons a.btn-orange {
+		float: left;
+	}
+	header .color-bar .mobile-buttons a.btn-blue {
+		float: right;
+	}
+	main .hotels .col-md-2 {
+		width: 20%;
+		float: left;
+		height: 300px;
+	}
+	.event-dates .col-md-3 {
+		float: left;
+		width: 50%;
+	}
+	.event-dates .col-md-3 .back-border {
+		margin: 80px 10px 0px;
+		min-height: 215px;
+	}
+	.event-dates {
+		padding-bottom: 20px;
+	}
+}
+
+/*-- Largest devices (larger desktops, 992px to 1200px) --*/
+@media (min-width: 992px) and (max-width: 1200px) {
+	.event-dates .col-md-3 .back-border {
+		background: none repeat scroll 0 0 #ffffff;
+		border-bottom: 5px solid #918977;
+		border-radius: 10px;
+		color: #5b5b5b;
+		font-family: lato;
+		margin: 80px 0px;
+		min-height: 250px;
+		padding: 25px 20px;
+		text-align: center;
+	}
+}
+
+/*-- Largest devices (larger desktops, 1201px and up ) --*/
+@media (min-width: 1201px) {}
+
+
