--- a/layouts/index.html
+++ b/layouts/index.html
@@ -2,56 +2,52 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Gophercon 2015</title>
-<!-- Bootstrap -->
-<link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
-<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-<!--[if lt IE 9]>
-<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-<![endif]-->
-<link href="css/main.css" rel="stylesheet">
-<link href="css/animate.css" rel="stylesheet">
+
+<link href="/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+
+
+<link href="/css/main.css" rel="stylesheet">
+<link href="/css/animate.css" rel="stylesheet">
 </head>
 <body>
 
 <header>
 
 	<div class="row colors">
-    	<div class="col-md-2 animated slideInDown"></div><!-- col-md-2 -->
-        <div class="col-md-2 animated slideInDown"></div><!-- col-md-2 -->
-        <div class="col-md-2 animated slideInDown"></div><!-- col-md-2 -->
-        <div class="col-md-2 animated slideInDown"></div><!-- col-md-2 -->
-        <div class="col-md-2 animated slideInDown"></div><!-- col-md-2 -->
-        <div class="col-md-2 animated slideInDown"></div><!-- col-md-2 -->
-    </div><!-- colors -->
-    
+    	<div class="col-md-2 animated slideInDown"></div>
+        <div class="col-md-2 animated slideInDown"></div>
+        <div class="col-md-2 animated slideInDown"></div>
+        <div class="col-md-2 animated slideInDown"></div>
+        <div class="col-md-2 animated slideInDown"></div>
+        <div class="col-md-2 animated slideInDown"></div>
+    </div>
+
 	<div class="header-content">
     	<div class="container">
                 <div class="row">
-                
+
                 <div class="tickets-section col-md-3">
                     <h3>Need tickets?</h3>
                     <p>Get your tickets early and guarantee your entrance to the largest <b>Go</b> convention.</p>
                     <a href="https://ti.to/gophercon/gophercon-2015" class="btn btn-orange" target="_blank">Purchase Tickets</a>
-                </div><!-- tickets-section -->
-                
+                </div>
+
                 <div class="col-md-6">
-                    <img class="animated slideInDown" src="images/gc15-logo.svg" alt="GopherCon 2015" title="GopherCon 2015" />
+                    <img class="animated slideInDown" src="/images/gc15-logo.svg" alt="GopherCon 2015" title="GopherCon 2015" />
                     <section class="countdown">
-                        <script src="countdown/countdown.js" type="text/javascript"></script>
+                        <script src="/countdown/countdown.js" type="text/javascript"></script>
                         <script type="application/javascript">
                         var myCountdownTest = new Countdown({
                             year	: 2015,
-                            month	: 7, 
+                            month	: 7,
                             day		: 7,
-                            minute	: 0, 
+                            minute	: 0,
                             second	: 0,
                             rangeHi		: "month",
                             rangeLo		: "hour",
-                            width	: 180, 
+                            width	: 180,
                             height	: 60,
                             labels : {
                                 font 	: "Arial",
@@ -62,25 +58,26 @@
                             }
                         });
                         </script>
-                    </section><!-- countdown -->
-                </div><!-- col-md-6 -->
-                
+                    </section>
+                </div>
+
                 <div class="speaker-section col-md-3">
                     <h3>Be a speaker!</h3>
                     <p>Submit your propsal and become a speaker at <b>GopherCon 2015</b></p>
                     <a href="http://cfp.gophercon.com/events/gc15" class="btn btn-blue" target="_blank">Speakers</a>
-                </div><!-- speaker-section -->
-            </div><!-- row -->
-        </div><!-- container -->
+                </div>
+            </div>
+        </div>
         <div class="color-bar">
         	<div style="display: none;" class="mobile-buttons">
             	<a href="https://ti.to/gophercon/gophercon-2015" class="btn btn-orange" target="_blank" class="btn btn-orange">Tickets</a>
                 <a href="http://cfp.gophercon.com/events/gc15" class="btn btn-blue" target="_blank">Speakers</a>
-            </div><!-- mobile-buttons -->
-        </div><!-- color-bar -->
-    </div><!-- header-content -->
-    
+            </div>
+        </div>
+    </div>
+
 </header>
+
 
 <main>
   <section class="main-info">
@@ -90,9 +87,9 @@
             	<h1>Till GopherCon <br /> <span>July 7th - 10th, 2015 in Denver, CO</span></h1>
                 <hr />
                 <p><b>GopherCon</b> is organized by GopherAcademy, LLC, a community-driven group of developers focused on the education of developers and the promotion of the Go programming language.</p>
-            </div><!-- col-md-8 -->
-        </div><!-- row -->
-    </div><!-- container -->
+            </div>
+        </div>
+    </div>
     </section>
     <section class="event-dates">
     <div class="container">
@@ -101,119 +98,138 @@
         			<div class="back-border">
 	        			<div class="event-date-orange">
 	        				<h3>July <span>7th</span></h3>
-	        				<img src="images/dates-background-orange.svg" alt="" />
+	        				<img src="/images/dates-background-orange.svg" alt="" />
 	        			</div>
 	        			<p><b>Work Shop ( Optional )</b></p>
-	        			<p>An optional but recomended workshop for those interested in Go.</p>
+	        			<p>Optional workshop day.  Workshops to be announced soon.</p>
         			</div>
 
-                         
-            </div><!-- col-md-3 -->
+
+            </div>
             <div class="col-md-3">
             	<div class="back-border">
 	            	<div class="event-date-blue">
 	            		<h3>July <span>8th</span></h3>
-	            		<img src="images/dates-background-blue.svg" alt="" />
+	            		<img src="/images/dates-background-blue.svg" alt="" />
 	            	</div>
                 <p><b>Main Event ( Day 1 )</b></p>
                 <p>Featuring our first day of guest speakers talks and presentations.</p>
                </div>
-            </div><!-- col-md-3 -->
+            </div>
             <div class="col-md-3">
             	<div class="back-border">
 	            	<div class="event-date-blue">
 	            		<h3>July <span>9th</span></h3>
-	            		<img src="images/dates-background-blue.svg" alt="" />
+	            		<img src="/images/dates-background-blue.svg" alt="" />
 	            	</div>
                 <p><b>Main Event ( Day 2 )</b></p>
                 <p>Our second and last day of guest speakers talks and presentations.</p>
               </div>
-            </div><!-- col-md-3 -->
+            </div>
             <div class="col-md-3">
             	<div class="back-border">
-	            	<div class="event-date-blue">
+	            	<div class="event-date-orange">
 	            		<h3>July <span>10th</span></h3>
-	            		<img src="images/dates-background-blue.svg" alt="" />
+	            		<img src="/images/dates-background-orange.svg" alt="" />
 	            	</div>
-                <p><b>Hack Day ( Day 3 )</b></p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
+                <p><b>Hack Day ( Optional )</b></p>
+                <p>Optional (but highly recommended) hack day.  Socialize and work with your Go friends.</p>
               </div>
-            </div><!-- col-md-3 -->
-        </div><!-- row -->
-    </div><!-- container -->
+            </div>
+        </div>
+    </div>
     </section>
-    
-    <div class="hotels row">	
+
+    <div class="hotels row">
     	<div class="container">
         	<div class="col-md-10 col-md-offset-1">
                 <h1>Hotels</h1>
                 <hr />
-                <p>We have reserved hotels that are closest to the convention center so that augue ac mauris sodales dictum vitae at est morbi. Note please mention GopherCon when making your reservations.</p>
-        	</div><!-- col-md-8 -->
-        </div><!-- container -->
+                <p>We have arranged special rates and reserved room blocks at hotels close to the Convention Center. Be sure to use the links, phone numbers, or booking codes below to get the reduced rates.</p>
+        	</div>
+        </div>
 
-    	<div class="embassy col-md-2">
-        	<h4>Embassy Suites</h4>
-        	<section>
-            	<p><b>$205.00</b> / night, plus tax</p>
-                <p>1420 Stout St,<br /> Denver, CO 80202</p>
-                <p>Tel: 303.592.1000</p>
-            </section>
-        </div><!-- col-md-2 -->
+
         <div class="hampton col-md-2">
         	<h4>Hampton Inn</h4>
         	<section>
-                <p><b>$169.00</b> / night, plus tax</p>
-                <p>1400 Welton St,<br /> Denver, CO 80202</p>
-                <p>Tel: 720.638.0215</p>
+				<div style="float:left"><p><b>$169.00</b> / night, plus tax</p>
+                <p>550 15th Street,<br /> Denver, CO 80202</p>
+				<p>Tel: 800.445.8667<br />
+					Code: GopherCon</p></div>
+							<div style="float:right"><a href="http://hamptoninn.hilton.com/en/hp/groups/personalized/D/DENCVHX-GOP-20150705/index.jhtml" class="btn btn-orange" target="_blank">Book</a></div>
             </section>
-        </div><!-- col-md-2 -->
+		</div>
+		        <div class="homewood col-md-2">
+        	<h4>Homewood Suites</h4>
+        	<section>
+			<div style="float:left"><p><b>$179.00</b> / night, plus tax</p>
+				<p>550 15th Street,<br /> Denver, CO 80202</p>
+				<p>Tel: 800.445.8667<br />
+					Code: GopherCon</p></div>
+				<div style="float:right"><a href="http://homewoodsuites.hilton.com/en/hw/groups/personalized/D/DENDCHW-GOP-
+20150705/index.jhtml" class="btn btn-orange" target="_blank">Book</a></div>
+            </section>
+        </div>
         <div class="hilton col-md-2">
         	<h4>Hilton Garden Inn</h4>
         	<section>
-                <p><b>$189.00</b> / night, plus tax</p>
-                <p>1400 Welton St,<br /> Denver, CO 80202</p>
-                <p>Tel: 303.603.8000</p>
+				<div style="float:left"><p><b>$189.00</b> / night, plus tax</p>
+                <p>1400 Welton Street,<br /> Denver, CO 80202</p>
+				<p>Tel: 855.215.1283<br />
+					Code: GopherCon</p></div>
+				<div style="float:right"><a href="http://hiltongardeninn.hilton.com/en/gi/groups/personalized/D/DENDDGI-GOPHER-20150705/index.jhtml" class="btn btn-orange" target="_blank">Book</a></div>
             </section>
-        </div><!-- col-md-2 -->
-        <div class="homewood col-md-2">
-        	<h4>Homewood Suites</h4>
-        	<section>
-            	<p><b>$179.00</b> / night, plus tax</p>
-                <p>550 15th St,<br /> Denver, CO 80202</p>
-                <p>Tel: 855.215.1283</p>
-            </section>
-        </div><!-- col-md-2 -->
+        </div>
+
         <div class="curtis col-md-2">
         	<h4>The Curtis</h4>
         	<section>
-            	<p><b>$199.00</b> / night, plus tax</p>
-                <p>1405 Curtis St,<br /> Denver, CO 80202</p>
-                <p>Tel: 303.571.0300</p>
+				<div style="float:left"><p><b>$199.00</b> / night, plus tax</p>
+                <p>1405 Curtis Street,<br /> Denver, CO 80202</p>
+				<p>Tel: 800.445.8667<br />
+					Code: GopherCon</p></div>
+				<div style="float:right"><a href="http://doubletree.hilton.com/en/dt/groups/personalized/D/DENCHDT-GCG-
+20150705/index.jhtml?WT.mc_id=POG" class="btn btn-orange" target="_blank">Book</a></div>
             </section>
-        </div><!-- col-md-2 -->
-    </div><!-- row -->
+		</div>
+    	<div class="embassy col-md-2">
+        	<h4>Embassy Suites</h4>
+        	<section>
+				<div style="float:left"><p><b>$205.00</b> / night, plus tax</p>
+                <p>1420 Stout Street,<br /> Denver, CO 80202</p>
+				<p>Tel: 800.445.8667<br />
+					Code: GopherCon </p></div>
+				<div style="float:right"><a href="http://embassysuites.hilton.com/en/es/groups/personalized/D/DENESES-GOP-
+20150705/index.jhtml" class="btn btn-orange" target="_blank">Book</a></div>
+            </section>
+        </div>
+
+		
+    </div>
 </main>
 
 <footer>
 	<div class="container">
     	<div class="row">
         	<div class="col-md-12">
-            	<p>© 2015 GopherCon, Incorporated</p>
-                <p>The Gopher character is based on the Go mascot designed by 
-                <a href="http://reneefrench.blogspot.com/" target="blank">Renée French</a> 
-                and copyrighted under the 
+            	<p>© 2015 GopherAcademy, LLC</p>
+                <p>The Gopher character is based on the Go mascot designed by
+                <a href="http://reneefrench.blogspot.com/" target="blank">Renée French</a>
+                and copyrighted under the
                 <a href="http://creativecommons.org/licenses/by/3.0/us/" target="blank">Creative Commons Attribution 3.0 license.</a>
 				</p>
-            </div><!-- col-md-12 -->
-        </div><!-- row -->
-    </div><!-- container -->
+            </div>
+        </div>
+    </div>
 </footer>
 
-<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-<!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="bootstrap/js/bootstrap.min.js"></script>
+
+<script src="/bootstrap/js/bootstrap.min.js"></script>
 
 </body>
 </html>
+
+
