Updated home page / Added Sponsors page / Added generic interior html

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,15 +1,20 @@
 <!doctype html>
 <html>
 <head>
-<meta charset="UTF-8">
+<meta charset="utf-8">
+<meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
+<meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
+<meta content="width=device-width, initial-scale=1.0" name="viewport">
+<meta content="GopherCon is organized by GopherAcademy, LLC, a community-driven group of developers focused on the education of developers and the promotion of the Go programming language." name="description">
+<meta content="go, golang, gophercon, convention" name="keywords">
+<meta content="text/html; charset=utf-8" http-equiv="Content-Type">
+<meta content="gophercon.com" name="author">
+<meta content="GopherCon 2015" name="copyright">
 <title>Gophercon 2015</title>
-
-<link href="/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
-
-
-<link href="/css/main.css" rel="stylesheet">
-<link href="/css/animate.css" rel="stylesheet">
+<link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
+<link href="css/main.css" rel="stylesheet">
+<link href="css/animate.css" rel="stylesheet">
+<link href='http://fonts.googleapis.com/css?family=Ubuntu:300,400,500' rel='stylesheet' type='text/css'>
 </head>
 <body>
 
@@ -23,6 +28,14 @@
         <div class="col-md-2 animated slideInDown"></div>
         <div class="col-md-2 animated slideInDown"></div>
     </div>
+    
+    <nav>
+    	<ul>
+        	<li><a href="#">About</a></li>
+        	<li><a href="#">Sponsors</a></li>
+            <li><a href="#">Scheduel</a></li>
+        </ul>
+    </nav>
 
 	<div class="header-content">
     	<div class="container">
@@ -35,9 +48,9 @@
                 </div>
 
                 <div class="col-md-6">
-                    <img class="animated slideInDown" src="/images/gc15-logo.svg" alt="GopherCon 2015" title="GopherCon 2015" />
+                    <img class="animated slideInDown" src="images/gc15-logo.svg" alt="GopherCon 2015" title="GopherCon 2015" />
                     <section class="countdown">
-                        <script src="/countdown/countdown.js" type="text/javascript"></script>
+                        <script src="countdown/countdown.js" type="text/javascript"></script>
                         <script type="application/javascript">
                         var myCountdownTest = new Countdown({
                             year	: 2015,
@@ -98,7 +111,7 @@
         			<div class="back-border">
 	        			<div class="event-date-orange">
 	        				<h3>July <span>7th</span></h3>
-	        				<img src="/images/dates-background-orange.svg" alt="" />
+	        				<img src="images/dates-background-orange.svg" alt="" />
 	        			</div>
 	        			<p><b>Work Shop ( Optional )</b></p>
 	        			<p>Optional workshop day.  Workshops to be announced soon.</p>
@@ -110,7 +123,7 @@
             	<div class="back-border">
 	            	<div class="event-date-blue">
 	            		<h3>July <span>8th</span></h3>
-	            		<img src="/images/dates-background-blue.svg" alt="" />
+	            		<img src="images/dates-background-blue.svg" alt="" />
 	            	</div>
                 <p><b>Main Event ( Day 1 )</b></p>
                 <p>Featuring our first day of guest speakers talks and presentations.</p>
@@ -120,7 +133,7 @@
             	<div class="back-border">
 	            	<div class="event-date-blue">
 	            		<h3>July <span>9th</span></h3>
-	            		<img src="/images/dates-background-blue.svg" alt="" />
+	            		<img src="images/dates-background-blue.svg" alt="" />
 	            	</div>
                 <p><b>Main Event ( Day 2 )</b></p>
                 <p>Our second and last day of guest speakers talks and presentations.</p>
@@ -130,7 +143,7 @@
             	<div class="back-border">
 	            	<div class="event-date-orange">
 	            		<h3>July <span>10th</span></h3>
-	            		<img src="/images/dates-background-orange.svg" alt="" />
+	            		<img src="images/dates-background-orange.svg" alt="" />
 	            	</div>
                 <p><b>Hack Day ( Optional )</b></p>
                 <p>Optional (but highly recommended) hack day.  Socialize and work with your Go friends.</p>
@@ -139,6 +152,62 @@
         </div>
     </div>
     </section>
+    
+    <div class="home-sponsors col-md-12">
+        	<div class="sponsor-title">Our Sponsors</div>
+            
+        	<!---------- Diamond Sponsors ---------->
+            <div class="col-md-12 diamond">
+                <a href="#"><img src="images/temp-logos/google.png" /></a>
+                <div class="clearfix"></div>
+            </div><!-- Diamond Sponsors End -->
+            
+            <!---------- Platinum Sponsors ---------->
+            <div class="col-md-12 platinum">
+                <a href="#"><img src="images/temp-logos/ubuntu.png" /></a>
+                <a href="#"><img src="images/temp-logos/github.png"/></a>
+                <a href="#"><img src="images/temp-logos/paypal.png"/></a>
+                <div class="clearfix"></div>
+            </div><!-- Platinum Sponsors End -->
+            
+            <!---------- Gold Sponsors ---------->
+            <div class="col-md-12 gold">
+                <a href="#"><img src="images/temp-logos/digital-ocean.png"/></a>
+                <a href="#"><img src="images/temp-logos/drama-fever.png"/></a>
+                <a href="#"><img src="images/temp-logos/paypal.png"/></a>
+                <a href="#"><img src="images/temp-logos/dena.png"/></a>
+                <a href="#"><img src="images/temp-logos/ironio.png"/></a>
+                <div class="clearfix"></div>
+            </div><!-- Gold Sponsors End -->
+            
+            <!---------- Silver Sponsors ---------->
+            <div class="col-md-12 silver">
+                <a href="#"><img src="images/temp-logos/mongodb.png"/></a>
+                <a href="#"><img src="images/temp-logos/twitch.png"/></a>
+                <a href="#"><img src="images/temp-logos/oreilly.png"/></a>
+                <a href="#"><img src="images/temp-logos/stackoverflow.png"/></a>
+                <a href="#"><img src="images/temp-logos/ubuntu.png"/></a>
+                <div class="clearfix"></div>
+            </div><!-- Silver Sponsors End -->
+            
+            <!---------- Bronze Sponsors ---------->
+            <div class="col-md-12 bronze">
+                <a href="#"><img src="images/temp-logos/datadog.png"/></a>
+                <a href="#"><img src="images/temp-logos/digital-ocean.png"/></a>
+                <a href="#"><img src="images/temp-logos/drama-fever.png"/></a>
+                <a href="#"><img src="images/temp-logos/stackoverflow.png"/></a>
+                <a href="#"><img src="images/temp-logos/cobenian.png"/></a>
+                <a href="#"><img src="images/temp-logos/apcera.png"/></a>
+                <a href="#"><img src="images/temp-logos/black.png"/></a>
+                <a href="#"><img src="images/temp-logos/twitch.png"/></a>
+                <a href="#"><img src="images/temp-logos/digital-ocean.png"/></a>
+                <a href="#"><img src="images/temp-logos/drama-fever.png"/></a>
+                <a href="#"><img src="images/temp-logos/paypal.png"/></a>
+                <a href="#"><img src="images/temp-logos/dena.png"/></a>
+                <div class="clearfix"></div>
+            </div><!-- Bronze Sponsors End -->
+            
+        </div><!-- sponsors col-md-12 -->
 
     <div class="hotels row">
     	<div class="container">
