--- a/themes/gophercon/layouts/sponsor/single.html
+++ b/themes/gophercon/layouts/sponsor/single.html
@@ -11,9 +11,9 @@
 <meta content="gophercon.com" name="author">
 <meta content="GopherCon 2015" name="copyright">
 <title>Gophercon 2015</title>
-<link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
-<link href="css/main.css" rel="stylesheet">
-<link href="css/animate.css" rel="stylesheet">
+<link href="/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+<link href="/css/main.css" rel="stylesheet">
+<link href="/css/animate.css" rel="stylesheet">
 </head>
 <body>
 
@@ -33,7 +33,7 @@
             <li><a href="#">Schedule</a></li>
         </ul>
         <a class="logo-small animated slideInDown" href="index.html">
-    		<img src="images/gophercon-small.svg" alt="GopherCon 2015" title="GopherCon 2015" />
+    		<img src="/images/gophercon-small.svg" alt="GopherCon 2015" title="GopherCon 2015" />
         </a>
     </nav>
 	<div class="header-content">
@@ -62,62 +62,62 @@
         
         	<!---------- Diamond Sponsors ---------->
             <div class="col-md-12 diamond">
-            	<img class="icon" src="images/diamond.png" />
+            	<img class="icon" src="/images/diamond.png" />
                 <h3>Diamond Sponsors</h3>
-                <a href="#"><img src="images/temp-logos/google.png" /></a>
+                <a href="#"><img src="/images/temp-logos/google.png" /></a>
                 <div class="clearfix"></div>
             </div><!-- Diamond Sponsors End -->
             
             <!---------- Platinum Sponsors ---------->
             <div class="col-md-12 platinum">
-            	<img class="icon" src="images/platinum.png" />
+            	<img class="icon" src="/images/platinum.png" />
                 <h3>Platinum Sponsors</h3>
-                <a href="#"><img src="images/temp-logos/ubuntu.png" /></a>
-                <a href="#"><img src="images/temp-logos/github.png"/></a>
-                <a href="#"><img src="images/temp-logos/paypal.png"/></a>
+                <a href="#"><img src="/images/temp-logos/ubuntu.png" /></a>
+                <a href="#"><img src="/images/temp-logos/github.png"/></a>
+                <a href="#"><img src="/images/temp-logos/paypal.png"/></a>
                 <div class="clearfix"></div>
             </div><!-- Platinum Sponsors End -->
             
             <!---------- Gold Sponsors ---------->
             <div class="col-md-12 gold">
-                <img class="icon" src="images/gold.png" />
+                <img class="icon" src="/images/gold.png" />
                 <h3>Gold Sponsors</h3>
-                <a href="#"><img src="images/temp-logos/digital-ocean.png"/></a>
-                <a href="#"><img src="images/temp-logos/drama-fever.png"/></a>
-                <a href="#"><img src="images/temp-logos/paypal.png"/></a>
-                <a href="#"><img src="images/temp-logos/dena.png"/></a>
-                <a href="#"><img src="images/temp-logos/ironio.png"/></a>
+                <a href="#"><img src="/images/temp-logos/digital-ocean.png"/></a>
+                <a href="#"><img src="/images/temp-logos/drama-fever.png"/></a>
+                <a href="#"><img src="/images/temp-logos/paypal.png"/></a>
+                <a href="#"><img src="/images/temp-logos/dena.png"/></a>
+                <a href="#"><img src="/images/temp-logos/ironio.png"/></a>
                 <div class="clearfix"></div>
             </div><!-- Gold Sponsors End -->
             
             <!---------- Silver Sponsors ---------->
             <div class="col-md-12 silver">
-                <img class="icon" src="images/silver.png" />
+                <img class="icon" src="/images/silver.png" />
                 <h3>Silver Sponsors</h3>
-                <a href="#"><img src="images/temp-logos/mongodb.png"/></a>
-                <a href="#"><img src="images/temp-logos/twitch.png"/></a>
-                <a href="#"><img src="images/temp-logos/oreilly.png"/></a>
-                <a href="#"><img src="images/temp-logos/stackoverflow.png"/></a>
-                <a href="#"><img src="images/temp-logos/ubuntu.png"/></a>
+                <a href="#"><img src="/images/temp-logos/mongodb.png"/></a>
+                <a href="#"><img src="/images/temp-logos/twitch.png"/></a>
+                <a href="#"><img src="/images/temp-logos/oreilly.png"/></a>
+                <a href="#"><img src="/images/temp-logos/stackoverflow.png"/></a>
+                <a href="#"><img src="/images/temp-logos/ubuntu.png"/></a>
                 <div class="clearfix"></div>
             </div><!-- Silver Sponsors End -->
             
             <!---------- Bronze Sponsors ---------->
             <div class="col-md-12 bronze">
-                <img class="icon" src="images/bronze.png" />
+                <img class="icon" src="/images/bronze.png" />
                 <h3>Bronze Sponsors</h3>
-                <a href="#"><img src="images/temp-logos/datadog.png"/></a>
-                <a href="#"><img src="images/temp-logos/digital-ocean.png"/></a>
-                <a href="#"><img src="images/temp-logos/drama-fever.png"/></a>
-                <a href="#"><img src="images/temp-logos/stackoverflow.png"/></a>
-                <a href="#"><img src="images/temp-logos/cobenian.png"/></a>
-                <a href="#"><img src="images/temp-logos/apcera.png"/></a>
-                <a href="#"><img src="images/temp-logos/black.png"/></a>
-                <a href="#"><img src="images/temp-logos/twitch.png"/></a>
-                <a href="#"><img src="images/temp-logos/digital-ocean.png"/></a>
-                <a href="#"><img src="images/temp-logos/drama-fever.png"/></a>
-                <a href="#"><img src="images/temp-logos/paypal.png"/></a>
-                <a href="#"><img src="images/temp-logos/dena.png"/></a>
+                <a href="#"><img src="/images/temp-logos/datadog.png"/></a>
+                <a href="#"><img src="/images/temp-logos/digital-ocean.png"/></a>
+                <a href="#"><img src="/images/temp-logos/drama-fever.png"/></a>
+                <a href="#"><img src="/images/temp-logos/stackoverflow.png"/></a>
+                <a href="#"><img src="/images/temp-logos/cobenian.png"/></a>
+                <a href="#"><img src="/images/temp-logos/apcera.png"/></a>
+                <a href="#"><img src="/images/temp-logos/black.png"/></a>
+                <a href="#"><img src="/images/temp-logos/twitch.png"/></a>
+                <a href="#"><img src="/images/temp-logos/digital-ocean.png"/></a>
+                <a href="#"><img src="/images/temp-logos/drama-fever.png"/></a>
+                <a href="#"><img src="/images/temp-logos/paypal.png"/></a>
+                <a href="#"><img src="/images/temp-logos/dena.png"/></a>
                 <div class="clearfix"></div>
             </div><!-- Bronze Sponsors End -->
             
