--- a/themes/gophercon/layouts/sponsor/single.html
+++ b/themes/gophercon/layouts/sponsor/single.html
@@ -59,16 +59,18 @@
 <main>
     <section class="row"> 
     	<div class="sponsors col-md-10">
-        
+
+			{{ if eq "diamond"  .Params.sponsorclass}}
         	<!---------- Diamond Sponsors ---------->
             <div class="col-md-12 diamond">
             	<img class="icon" src="/images/diamond.png" />
                 <h3>Diamond Sponsors</h3>
-                <a href="#"><img src="/images/temp-logos/google.png" /></a>
+				<a href="#"><img src="{{.Params.logo}}" /></a>
+				{{ .Content }}
                 <div class="clearfix"></div>
             </div><!-- Diamond Sponsors End -->
-            
-            <!---------- Platinum Sponsors ---------->
+			{{ end }} 
+            <!---------- Platinum Sponsors 
             <div class="col-md-12 platinum">
             	<img class="icon" src="/images/platinum.png" />
                 <h3>Platinum Sponsors</h3>
@@ -76,9 +78,9 @@
                 <a href="#"><img src="/images/temp-logos/github.png"/></a>
                 <a href="#"><img src="/images/temp-logos/paypal.png"/></a>
                 <div class="clearfix"></div>
-            </div><!-- Platinum Sponsors End -->
+            </div>
             
-            <!---------- Gold Sponsors ---------->
+            
             <div class="col-md-12 gold">
                 <img class="icon" src="/images/gold.png" />
                 <h3>Gold Sponsors</h3>
@@ -88,9 +90,9 @@
                 <a href="#"><img src="/images/temp-logos/dena.png"/></a>
                 <a href="#"><img src="/images/temp-logos/ironio.png"/></a>
                 <div class="clearfix"></div>
-            </div><!-- Gold Sponsors End -->
+            </div>
             
-            <!---------- Silver Sponsors ---------->
+            
             <div class="col-md-12 silver">
                 <img class="icon" src="/images/silver.png" />
                 <h3>Silver Sponsors</h3>
@@ -100,9 +102,9 @@
                 <a href="#"><img src="/images/temp-logos/stackoverflow.png"/></a>
                 <a href="#"><img src="/images/temp-logos/ubuntu.png"/></a>
                 <div class="clearfix"></div>
-            </div><!-- Silver Sponsors End -->
+            </div>
             
-            <!---------- Bronze Sponsors ---------->
+            
             <div class="col-md-12 bronze">
                 <img class="icon" src="/images/bronze.png" />
                 <h3>Bronze Sponsors</h3>
@@ -119,8 +121,8 @@
                 <a href="#"><img src="/images/temp-logos/paypal.png"/></a>
                 <a href="#"><img src="/images/temp-logos/dena.png"/></a>
                 <div class="clearfix"></div>
-            </div><!-- Bronze Sponsors End -->
-            
+            </div>
+			--> 
         </div><!-- sponsors col-md-10 -->
         
         <div class="sidebar col-md-2">
