more theme work

--- a/themes/gophercon/layouts/partials/interior-header.html
+++ b/themes/gophercon/layouts/partials/interior-header.html
@@ -11,9 +11,9 @@
 <meta content="gophercon.com" name="author">
 <meta content="GopherCon 2015" name="copyright">
 <title>Gophercon 2015</title>
-<link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
-<link href="css/main.css" rel="stylesheet">
-<link href="css/animate.css" rel="stylesheet">
+<link href="/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+<link href="/css/main.css" rel="stylesheet">
+<link href="/css/animate.css" rel="stylesheet">
 </head>
 <body>
 
@@ -33,7 +33,7 @@
             <li><a href="#">Schedule</a></li>
         </ul>
         <a class="logo-small animated slideInDown" href="index.html">
-                <img src="images/gophercon-small.svg" alt="GopherCon 2015" title="GopherCon 2015" />
+                <img src="/images/gophercon-small.svg" alt="GopherCon 2015" title="GopherCon 2015" />
         </a>
     </nav>
         <div class="header-content">
