--- a/themes/gophercon/layouts/partials/interior-header.html
+++ b/themes/gophercon/layouts/partials/interior-header.html
@@ -28,8 +28,8 @@
     </div>
     <nav>
         <ul>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Sponsors</a></li>
+                <li><a href="/about/">About</a></li>
+                <li><a href="/sponsors/">Sponsors</a></li>
             <li><a href="#">Schedule</a></li>
         </ul>
         <a class="logo-small animated slideInDown" href="index.html">
@@ -40,7 +40,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-8 col-md-offset-2 interior-header">
-                        <h1>Interior Title</h1>
+					<h1>{{ .Data.Title }}</h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit maecenas sollicitudin odio sed ante commodo.</p>
                 </div><!-- col-md-8 -->
             </div><!-- row -->
